--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,13 +4,14 @@ site_author: Juma Shafara
 site_url: https://jumashafara.dataidea.org/
 
 # Repository
-repo_name: jumashafara/jumashafara
-repo_url: https://github.com/jumashafara/jumashafara
-edit_uri: edit/main/docs/
+# repo_name: jumashafara/jumashafara
+# repo_url: https://github.com/jumashafara/jumashafara
+# edit_uri: edit/main/docs/
 
 # Theme
 theme:
-  name: material
+  name:
+    material
     # palette
   palette:
     # Palette toggle for automatic mode
@@ -23,7 +24,7 @@ theme:
 
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      scheme: default 
+      scheme: default
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
@@ -53,15 +54,19 @@ theme:
 
 # Navigation
 nav:
-  - Blog: index.md
+  - Home: index.md
+  - Blog: blog/index.md
+  - Projects: projects/index.md
+  - Courses: courses/index.md
   - About: about.md
   - CV: cv.md
 
 # Plugins
 plugins:
   - search
+  - macros
   - blog:
-      blog_dir: .
+      blog_dir: blog
       post_dir: posts
       archive: false
       archive_name: Archive
@@ -70,6 +75,8 @@ plugins:
       categories_name: Categories
       pagination: true
       pagination_per_page: 10
+      authors: true
+      authors_file: "{blog}/.authors.yml"
 
 # Extra CSS
 extra_css:
@@ -120,4 +127,3 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
       combine_header_slug: true
-         
