--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "mkdocs (>=1.6.1,<2.0.0)",
     "mkdocs-material (>=9.6.16,<10.0.0)",
+    "mkdocs-macros-plugin (>=1.3.9,<2.0.0)",
 ]
 
 
