--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "mkdocs (>=1.6.1,<2.0.0)",
     "mkdocs-material (>=9.6.16,<10.0.0)",
     "mkdocs-macros-plugin (>=1.3.9,<2.0.0)",
+    "pypdf2 (>=3.0.1,<4.0.0)",
 ]
 
 [tool.poetry]
